Scrollbars no longer show through the modal background on Mac Firefox. They disappear while the modal is being displayed.

--- a/ mocha-ui --username gregory.houston/css/mocha.css
+++ b/ mocha-ui --username gregory.houston/css/mocha.css
@@ -285,7 +285,8 @@ div.mocha .mochaScrollerpad {
 	opacity: 0;
 	filter: alpha(opacity=0);
 	-moz-opacity: 0;
-	z-index: 10000;	
+	z-index: 10000;
+	overflow: auto; /* For Mac Firefox 2 */	
 }	
 	
 /* fix for IE6 select z-index issue */
